# nodejs-server/service/OrdersService.js
@@ -7,11 +7,24 @@
  *
  * accountId Integer 
  * orderId Integer 
- * no response value expected for this operation
+ * returns EASObject
  **/
 exports.accountsAccountIdOrdersOrderIdDELETE = function(accountId,orderId) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    var examples = {};
+    examples['application/json'] = {
+  "access_token" : "access_token",
+  "refresh_token_expires_in" : 6,
+  "refresh_token" : "refresh_token",
+  "scope" : "scope",
+  "token_type" : "token_type",
+  "expires_in" : 0
+};
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
   });
 }
 
